Issue 1906 (#1983)
* Add resizer for margin indicator

* Add resizer for padding indicator

* Minor fix

* Fix resize

* Fix handle style

* Fix test

* Minor fix

* Fix indicator hover color and extra space

* Fix margin 0 rezise

* Fix test

--- a/src/components/indicators/editor.scss
+++ b/src/components/indicators/editor.scss
@@ -8,11 +8,46 @@
 	transition: opacity 0.5s;
 
 	&:hover {
-		.maxi-indicators__padding,
+		.maxi-indicators__padding {
+			opacity: 1;
+
+			.maxi-indicators__handle {
+				background-color: #4517ff;
+			}
+		}
 		.maxi-indicators__margin {
+			opacity: 1;
+
+			.maxi-indicators__handle {
+				background-color: #ff4a17;
+			}
+		}
+	}
+	&__handle {
+		opacity: 0;
+		transition: all 0.5s;
+
+		&:hover {
 			opacity: 1;
 		}
 	}
+	&__top-handle {
+		top: -4px !important;
+		height: 4px !important;
+	}
+	&__bottom-handle {
+		bottom: -4px !important;
+		height: 4px !important;
+	}
+	&__right-handle {
+		right: -4px !important;
+		width: 4px !important;
+	}
+	&__left-handle {
+		left: -4px !important;
+		width: 4px !important;
+	}
+
 	.maxi-indicators__margin,
 	.maxi-indicators__padding {
 		position: absolute;
@@ -37,7 +72,7 @@
 			top: 0;
 			right: 0;
 			height: 100%;
-			width: 0;
+			width: auto;
 
 			span {
 				transform: translate(50%, -50%);
@@ -50,7 +85,7 @@
 			top: 0;
 			left: 0;
 			height: 100%;
-			width: 0;
+			width: auto;
 
 			span {
 				transform: translate(50%, -50%);
@@ -62,11 +97,23 @@
 		background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%237a7a7a' fill-opacity='0.2' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 		color: #222;
 		z-index: 1;
+		transition: background-color 0.5s;
+
+		&:hover {
+			background-color: #555;
+			color: #fff;
+		}
 	}
 	.maxi-indicators__padding {
 		background-color: #e5f2f8;
 		background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%237a7a7a' fill-opacity='0.1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 		color: #9b9b9b;
-		z-index: 0;
+		z-index: 2;
+		transition: background-color 0.5s;
+
+		&:hover {
+			background-color: #555;
+			color: #fff;
+		}
 	}
 }
